RESOLVED FIXED199576
Unable to play videos on xfinity.com/stream on macOS Catalina
https://bugs.webkit.org/show_bug.cgi?id=199576
Summary Unable to play videos on xfinity.com/stream on macOS Catalina
Chris Dumez
Reported 2019-07-08 09:29:09 PDT
Unable to play videos on xfinity.com/stream on macOS Catalina.
Attachments
Patch (4.29 KB, patch)
2019-07-08 09:32 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-07-08 09:29:22 PDT
Chris Dumez
Comment 2 2019-07-08 09:32:34 PDT
WebKit Commit Bot
Comment 3 2019-07-08 11:14:27 PDT
Comment on attachment 373635 [details] Patch Clearing flags on attachment: 373635 Committed r247213: <https://trac.webkit.org/changeset/247213>
WebKit Commit Bot
Comment 4 2019-07-08 11:14:29 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.