Unable to play videos on xfinity.com/stream on macOS Catalina https://bugs.webkit.org/show_bug.cgi?id=199576 <rdar://problem/50101264>

Reviewed by Alex Christensen.

Source/WebCore:

Enable invalidate Fetch signal quirk for all sites as the blacklist is getting too large and
we are finding too much breakage too late in the release cycle.

* Modules/fetch/FetchRequest.cpp:
(WebCore::processInvalidSignal):
* page/Quirks.cpp:
(WebCore::Quirks::shouldIgnoreInvalidSignal const):

LayoutTests:

Rebaseline existing test.

* http/wpt/fetch/request-abort-expected.txt:


Canonical link: https://commits.webkit.org/213470@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247213 268f45cc-cd09-0410-ab3c-d52691b4dbfc