Source/WebCore/Modules/fetch/FetchRequest.cpp
@@ -147,7 +147,7 @@ ExceptionOr<void> FetchRequest::initializeOptions(const Init& init)
 
 static inline Optional<Exception> processInvalidSignal(ScriptExecutionContext& context)
 {
-    ASCIILiteral message { "FetchRequestInit.signal should be undefined, null or an AbortSignal object."_s };
+    ASCIILiteral message { "FetchRequestInit.signal should be undefined, null or an AbortSignal object. This will throw in a future release."_s };
     context.addConsoleMessage(MessageSource::JS, MessageLevel::Warning, message);
 
     if (is<Document>(context) && downcast<Document>(context).quirks().shouldIgnoreInvalidSignal())
